update to use jdk8 api for *-api projects