@@ -19,6 +19,7 @@ package org.opensaml.saml.saml2.profile.impl;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.function.Function;
 
@@ -112,7 +113,7 @@ public class EncryptNameIDs extends AbstractEncryptAction {
      * @param formats   formats to exclude
      */
     public void setExcludedFormats(@Nonnull @NonnullElements final Collection<String> formats) {
-        excludedFormats = Set.copyOf(StringSupport.normalizeStringCollection(formats));
+        excludedFormats = Collections.unmodifiableSet(new HashSet<>(StringSupport.normalizeStringCollection(formats)));
     }
 
     /** {@inheritDoc} */
